--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ED1115</title>
+    <link rel="stylesheet" href="style.css">
+ 
+</head>
+</style>
+<body>
+    <div class="container">
+        <div class="nabar">
+            <div class="logo">
+                <a href="#">ED1115</a>
+            </div>
+            <ul>
+                <li><a href="https://www.instagram.com/xwed1115wx?igsh=MXdncTJwd3M3ZWo3dQ==">INSTAGRAM</a></li>
+                <li><a href="https://www.youtube.com/@efedefne1115I2">YOUTUBE</a></li>
+                <li><a href="https://steamcommunity.com/profiles/76561198968339696/">STEAM</a></li>
+                <li><a href="https://www.youtube.com/watch?v=n6Gqe7hH2YQ">IDEA</a></li>
+            </ul>
+        </div>
+     </div>
+    
+</body>
+</html>
